# FastCash

./: .env  .gitignore  FastCash Live.session.sql  FastCash Local.session.sql  LICENSE  README.md  docker-compose.yml  fastcash.session.sql  launch-debug.sh  launch-init.sh  launch.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
Dockerfiles/: app  app.dockerfile  db.dockerfile  dev  dev.dockerfile
app/: initialize.py  main.py
app/src/: config.py  logger.py
app/src/api/: api.py
app/src/api/api_v1/: api.py
app/src/api/endpoints/: app_user.py  login.py  product.py  product_type.py  tags.py
app/src/common/: security.py  utils.py
app/src/db/: engine.py  manager.py
app/src/models/: app_user.py  link.py  menu.py  order.py  product.py  product_type.py  tag.py
app/src/models/api/: product.py  product_type.py
app/src/models/db/: app_user.py  link.py  (+3 more)
app/src/schemas/: entities.py
app/test/: Product.py  document_test.py  test_db.py  test_main.py
documentation/examples/modern-python/: async.py  pyd.py  sync.py
documentation/examples/simple-start/: example.py
documentation/examples/sqlmodel/: main.py  sql_model_01.py  sql_model_02.py  sql_model_04.py  sql_model_fast_01.py  sql_model_fast_06.py
examples/: info.md
examples/modern-python/: type_hints.py
live/: main.py  pyproject.toml  requirements.txt  test_first.py  test_main.py  test_product.py
live/src/: config.py
live/src/api/: api.py
live/src/db/: engine.py  manager.py
live/src/models/: product.py
test/: test_db.py  test_first.py  test_product.py
(+2 files in other folders)
