[tool.poetry]
name = "FastCash"
version = "0.1.0"
description = "FastAPI FastCash Project example"
authors = [
    "Jeydi <andrea.guzzo92@gmail.com>",
    "Burlesco70"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PythonBiellaGroup/FastCash"
repository = "https://github.com/PythonBiellaGroup/FastCash"
documentation = "https://github.com/PythonBiellaGroup/FastCash"

classifiers = [
    "Topic :: Learn FastAPI",
    "Topic :: FastCash App"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
colorama = "^0.4.4"
httpx = "^0.18.1"
python-dateutil = "^2.8.1"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
pydantic = "^1.8.2"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
sqlmodel = "^0.0.4"


[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
flake8-isort = "4.0.0"
flake8-builtins = "1.5.3"
autopep8 = "1.5.7"
pylint = "2.8.2"
bandit = "1.7.0"
black = "21.5b0"
mypy = "0.812"
flake8-bandit = "2.1.2"
flake8-mypy = "17.8.0"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
autoflake = "^1.3.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


